<resources>
    <string name="app_name">PS_Store</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="button_next">Войти</string>
    <string name="button_reg">Регистрация</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="card_number">Номер банковской карты</string>
    <string name="cvv">CVV код</string>
    <string name="button_freg">Зарегистрироваться</string>
    <string name="filter_title">Фильтр</string>
    <string name="contact">Контакты</string>
    <string name="out">Выход</string>

    <string-array name="consoleList">
        <item>Все</item>
        <item>PlayStation 3</item>
        <item>PlayStation 4</item>
        <item>Xbox</item>
    </string-array>
</resources>
